# jtrdll

doc/: CHANGES-jumbo.git  OPTIONS
jtrdll/: CMakeLists.txt  cpuinformation.cpp  cpuinformation.h  dllio.cpp  dllio.h  jtrdll.h  jtrexe.c  jtrexe.cpp  version.h
jtrdll/jtrexe/: cpuinformation.cpp  cpuinformation.h  jtrexe.cpp  jtrexe.h  processhost.cpp  processhost.h
jtrdll/linux/: arch.h  autoconfig.h  john_build_rule.h  linuxconfig.h
jtrdll/osx/: arch.h  autoconfig.h  john_build_rule.h  osxconfig.h
jtrdll/w32/: arch.h  autoconfig.h  john_build_rule.h  w32config.h
jtrdll/w64/: arch.h  autoconfig.h  john_build_rule.h  w64config.h
jtrdll/windows/: gettimeofday.c  gettimeofday.h  strcasestr.c  strcasestr.h
jtrdll/zlib/contrib/masmx64/: gvmat64.lst  inffasx64.lst
jtrdll/zlib/contrib/minizip/: ioapi.h
run/: hybrid.conf  hybrid_new.inc.conf  john.conf
src/: DES_bs_b.c  DOMINOSEC_fmt_plug.c  HDAA_fmt_plug.c  LM_fmt.c  agilekeychain_fmt_plug.c  aix_ssha_fmt_plug.c  androidfde_fmt_plug.c  argon2_opt_plug.c  asn1_plug.c  batch.c  bcrypt_pbkdf_plug.c  bench.c  bench.h  best.c  bitcoin_fmt_plug.c  blake2-impl.h  blake2.h  blake2b-ref_plug.c  blake2b-round.h  blake2b_plug.c  blamka-round-opt.h  blockchain_fmt_plug.c  bt.c  bt_hash_type_128.c  bt_hash_type_192.c  bt_hash_type_64.c  build_table.c  clipperz_srp_fmt_plug.c  cloudkeychain_fmt_plug.c  common-gpu.c  common-gpu.h  common-opencl.c  common-opencl.h  common.h  common_opencl_pbkdf2_plug.c  compiler.c  config.c  cracker.c  cracker.h  crypto_scrypt.h  (+188 more)
src/aes/: aes.h
src/aes/openssl/: ossl_aes.c  ossl_aes_crypto.c
src/cuda/: cuda_common.cu  cuda_common.cuh
src/cygwin/: ethernet.h
src/escrypt/: crypto_scrypt-common.c  crypto_scrypt-sse.c  crypto_scrypt.h  scrypt_platform.c  scrypt_platform.h  sha256.c  sha256.h  sysendian.h
src/opencl/: cryptsha512_kernel_GPU.cl  lm_kernel_b.cl  nt_kernel.cl  pbkdf2_hmac_sha1_unsplit_kernel.cl
src/secp256k1/: libsecp256k1-config.h
src/unused/: crc32-calculator.c  rarinfo.c  rawSHA0_fmt_plug.c
src/unused/pdf/: pdf2john.c  pdfcrack.c  pdfcrack_common.h  pdfcrack_rc4.h  pdfparser.h
src/ztex/: device_format.c  device_format.h  task.h  ztex.c
