CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(jtrdll)

# Set CMAKE_BUILD_TYPE (default = Release)
if("${CMAKE_BUILD_TYPE}" STREQUAL "")
	set(CMAKE_BUILD_TYPE Release)
endif()

##
## CUDA SDKS
##

FIND_PACKAGE(CUDA REQUIRED)
STRING(REPLACE "cudart" "cudart_static" CUDA_LIBRARIES ${CUDA_LIBRARIES})
MESSAGE("CUDA_LIBRARIES: ${CUDA_LIBRARIES}")


##
## OPENCL/APP SDK
##
IF(CMAKE_BUILD_TYPE MATCHES "[Tt][Bb][Bb]")
	return( )
ENDIF()

# Auto-select bitness based on platform
IF( NOT BITNESS )
    IF (CMAKE_SIZEOF_VOID_P EQUAL 8)
        SET(BITNESS 64)
    ELSE()
        SET(BITNESS 32)
    ENDIF()
ENDIF()

# Select bitness for non-msvc platform. Can be specified as -DBITNESS=32/64 at command-line
IF( NOT MSVC )
    set(BITNESS ${BITNESS} CACHE STRING "Specify bitness")
    set_property(CACHE BITNESS PROPERTY STRINGS "64" "32")
ENDIF()

# Unset OPENCL_LIBRARIES, so that corresponding arch specific libs are found when bitness is changed
UNSET(OPENCL_LIBRARIES CACHE)

IF( BITNESS EQUAL 64 )
    SET(BITNESS_SUFFIX x86_64)
ELSEIF( BITNESS EQUAL 32 )
    SET(BITNESS_SUFFIX x86)
ELSE()
    MESSAGE( FATAL_ERROR "Bitness specified is invalid" )
ENDIF()

# Set platform
IF( NOT UNIX )
	SET(PLATFORM win)
ELSE()
	SET(PLATFORM lnx)
ENDIF()

FIND_PATH( OPENCL_INCLUDE_DIRS 
    NAMES OpenCL/cl.h CL/cl.h
    HINTS $ENV{AMDAPPSDKROOT}/include/
)
MARK_AS_ADVANCED(OPENCL_INCLUDE_DIRS)

FIND_LIBRARY( OPENCL_LIBRARIES
	NAMES OpenCL
	HINTS $ENV{AMDAPPSDKROOT}/lib
	PATH_SUFFIXES ${PLATFORM}${BITNESS} ${BITNESS_SUFFIX}
)
MARK_AS_ADVANCED( OPENCL_LIBRARIES )

IF( OPENCL_INCLUDE_DIRS STREQUAL "" OR OPENCL_LIBRARIES STREQUAL "")
	MESSAGE( FATAL_ERROR "Could not locate OpenCL include & libs" )
ENDIF( )

MESSAGE(OPENCL_INCLUDE_DIRS: ${OPENCL_INCLUDE_DIRS})
MESSAGE(OPENCL_LIBRARIES: ${OPENCL_LIBRARIES})

##
## OPENSSL
##

FIND_PACKAGE(OpenSSL REQUIRED)

IF(${CMAKE_BUILD_TYPE} MATCHES "Debug")
#MESSAGE("LIB_EAY_LIBRARY_DEBUG: ${LIB_EAY_LIBRARY_DEBUG}")
#MESSAGE("SSL_EAY_LIBRARY_DEBUG: ${SSL_EAY_LIBRARY_DEBUG}")
SET(OPENSSL_LIBRARIES ${LIB_EAY_LIBRARY_DEBUG} ${SSL_EAY_LIBRARY_DEBUG})
ENDIF(${CMAKE_BUILD_TYPE} MATCHES "Debug")

IF(${CMAKE_BUILD_TYPE} MATCHES "Release")
#MESSAGE("LIB_EAY_LIBRARY_RELEASE: ${LIB_EAY_LIBRARY_RELEASE}")
#MESSAGE("SSL_EAY_LIBRARY_RELEASE: %{SSL_EAY_LIBRARY_RELEASE}")
SET(OPENSSL_LIBRARIES ${LIB_EAY_LIBRARY_RELEASE} ${SSL_EAY_LIBRARY_RELEASE})
ENDIF(${CMAKE_BUILD_TYPE} MATCHES "Release")

MESSAGE("OPENSSL_INCLUDE_DIR: ${OPENSSL_INCLUDE_DIR}")
MESSAGE("OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES}")


##
## ZLIB
##


FILE(GLOB zlib_HEADERS
	"${CMAKE_CURRENT_SOURCE_DIR}/zlib/*.h"
)

FILE(GLOB zlib_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/zlib/*.c"
)

SET(ZLIB_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/zlib")


##
## SOURCES
##

FILE(GLOB jtrdll_HEADERS
    "../src/*.h"
    "../src/aes/*.h"
    "../src/aes/openssl/*.h"
#    "../src/aes/aesni/*.h"
    "../src/escrypt/*.h"
    "../src/cuda/*.cuh"
)

FILE(GLOB jtrdll_SOURCES
    "../src/*.c"
    "../src/*.cpp"
    "../src/aes/*.c"
    "../src/aes/openssl/*.c"
#    "../src/aes/aesni/*.c"
    "../src/escrypt/*.c"
	"../src/cuda/*.cu"
    "*.cpp"
    "*.h"
)

FILE(GLOB FMT_PLUGINS
    "../src/*_fmt_plug.c"
)


##
## Platform
##

SET(PLATFORM_DEFINITIONS "")
SET(PLATFORM_INCLUDE_DIRS "")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

# Test 32/64 bits
IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
    MESSAGE(STATUS "Target is 64 bits")
    SET(WINXXBITS Win64)
ELSE("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
    MESSAGE(STATUS "Target is 32 bits")
    SET(WINXXBITS Win32)
ENDIF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
	
IF(${WINXXBITS} MATCHES "Win64")

	SET(PLATFORM_DEFINITIONS -D_SCL_SECURE_NO_WARNINGS=1 -D_CRT_SECURE_NO_WARNINGS=1 -D_WIN32_WINNT=0x0501)
	SET(PLATFORM_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/w64 ${CMAKE_CURRENT_SOURCE_DIR}/windows)
	
	FILE(GLOB w64_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/w64/*.h)
	FILE(GLOB w64_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/w64/*.c)
	FILE(GLOB windows_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/windows/*.h)
	FILE(GLOB windows_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/windows/*.c)
	
	LIST(APPEND jtrdll_HEADERS ${w64_HEADERS} ${windows_HEADERS} )
	LIST(APPEND jtrdll_SOURCES ${w64_SOURCES} ${windows_SOURCES} )
	
	FILE(TO_NATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../src/x86-64.S" X86_64_S)
	FILE(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/x86-64-pre.S" X86_64_PRE_S)
	FILE(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/x86-64.obj" X86_64_OBJ)
	FILE(TO_NATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/w64/as.exe" W64_AS)
	
	MESSAGE(${X86_64_S})
	MESSAGE(${X86_64_PRE_S})
	MESSAGE(${X86_64_OBJ})
	MESSAGE(${W64_AS})
	
	ADD_CUSTOM_COMMAND(
		OUTPUT ${CMAKE_BINARY_DIR}/x86-64.obj
		COMMAND cl /P ${X86_64_S} /Fi${X86_64_PRE_S} /D_WIN64 /I${CMAKE_CURRENT_SOURCE_DIR}/w64
		COMMAND ${W64_AS} ${X86_64_PRE_S} -o ${X86_64_OBJ}
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../src/x86-64.S
	)
	SET ( ASM_OBJECTS "${CMAKE_BINARY_DIR}/x86-64.obj")
	MESSAGE (ASM_OBJECTS="${CMAKE_BINARY_DIR}/x86-64.obj")
	
ENDIF(${WINXXBITS} MATCHES "Win64") 

IF(${WINXXBITS} MATCHES "Win32")
	SET(PLATFORM_DEFINITIONS -D_SCL_SECURE_NO_WARNINGS=1 -D_CRT_SECURE_NO_WARNINGS=1 -D_WIN32_WINNT=0x0501)
	SET(PLATFORM_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/w32 ${CMAKE_CURRENT_SOURCE_DIR}/windows)

	FILE(GLOB w32_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/w32/*.h)
	FILE(GLOB w32_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/w32/*.c)
	FILE(GLOB windows_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/windows/*.h)
	FILE(GLOB windows_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/windows/*.c)
	
	LIST(APPEND jtrdll_HEADERS ${w32_HEADERS} ${windows_HEADERS} )
	LIST(APPEND jtrdll_SOURCES ${w32_SOURCES} ${windows_SOURCES} )
	
	FILE(TO_NATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../src/x86-sse.S" X86_SSE_S)
	FILE(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/x86-sse-pre.S" X86_SSE_PRE_S)
	FILE(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/x86-sse.obj" X86_SSE_OBJ)

	FILE(TO_NATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../src/x86.S" X86_S)
	FILE(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/x86-pre.S" X86_PRE_S)
	FILE(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/x86.obj" X86_OBJ)

	FILE(TO_NATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/w32/yasm-1.3.0-win32.exe" W32_AS)
	
	MESSAGE(${X86_S})
	MESSAGE(${X86_PRE_S})
	MESSAGE(${X86_OBJ})
	MESSAGE(${W32_AS})
	
	ADD_CUSTOM_COMMAND(
		OUTPUT ${CMAKE_BINARY_DIR}/x86-sse.obj
		COMMAND cl /P ${X86_SSE_S} /Fi${X86_SSE_PRE_S} /DUNDERSCORES=1 /D_WIN32 /I${CMAKE_CURRENT_SOURCE_DIR}/w32
		COMMAND ${W32_AS} ${X86_SSE_PRE_S} -a x86 -p gas -f win32 -g cv8 -o ${X86_SSE_OBJ} --list=x86-sse.lst
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../src/x86-sse.S
	)
	
	ADD_CUSTOM_COMMAND(
		OUTPUT ${CMAKE_BINARY_DIR}/x86.obj
		COMMAND cl /P ${X86_S} /Fi${X86_PRE_S} /DUNDERSCORES=1 /D_WIN32 /I${CMAKE_CURRENT_SOURCE_DIR}/w32
		COMMAND ${W32_AS} ${X86_PRE_S} -a x86 -p gas -f win32 -o ${X86_OBJ} --list=x86.lst
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../src/x86.S
	)
	
	SET ( ASM_OBJECTS ${CMAKE_BINARY_DIR}/x86.obj ${CMAKE_BINARY_DIR}/x86-sse.obj)
	MESSAGE (ASM_OBJECTS = ${CMAKE_BINARY_DIR}/x86.obj ${CMAKE_BINARY_DIR}/x86-sse.obj)
ENDIF(${WINXXBITS} MATCHES "Win32") 


ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 


##
## JTRDLL
##


# remove #included programs
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/haval_helper.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/sboxes-s.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/sboxes.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/nonstd.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/md_helper.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/mmap-windows.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/uaf_hash.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/aes/openssl/ossl_aes_crypto.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/escrypt/crypto_scrypt-nosse.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/escrypt/crypto_scrypt-ref.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/escrypt/crypto_scrypt-sse.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/escrypt/scrypt_platform.c)

# remove main() programs
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/best.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/calc_stat.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/cprepair.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/detect.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/genmkvpwd.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/mkvcalcproba.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/para-best.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/raw2dyna.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/SIPdump.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/symlink.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/tgtsnarf.c)

# remove 2john programs
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/dmg2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/luks2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/truecrypt_volume2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/gpg2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/mozilla2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/uaf2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/hccap2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/pfx2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/vncpcap2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/keepass2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/putty2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/wpapcap2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/keychain2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/pwsafe2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/wpapcap2john.h)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/keyring2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/racf2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/zip2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/keystore2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/rar2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/kwallet2john.c)
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/ssh2john.c)

# Write out fmt_externs
FILE(WRITE ${CMAKE_BINARY_DIR}/fmt_externs.h "#define FMT_EXTERNS_H 1\n")
FOREACH(FMTPLUG ${FMT_PLUGINS})
	GET_FILENAME_COMPONENT(FMTPLUGNAME ${FMTPLUG} NAME)
	FILE(APPEND ${CMAKE_BINARY_DIR}/fmt_externs.h "#include \"${FMTPLUGNAME}\"\n")
ENDFOREACH(FMTPLUG)
FILE(APPEND ${CMAKE_BINARY_DIR}/fmt_externs.h "#undef FMT_EXTERNS_H\n")

# Write out fmt_registers
FILE(WRITE ${CMAKE_BINARY_DIR}/fmt_registers.h "#define FMT_REGISTERS_H 1\n")
FOREACH(FMTPLUG ${FMT_PLUGINS})
	GET_FILENAME_COMPONENT(FMTPLUGNAME ${FMTPLUG} NAME)
	FILE(APPEND ${CMAKE_BINARY_DIR}/fmt_registers.h "#include \"${FMTPLUGNAME}\"\n")
ENDFOREACH(FMTPLUG)
FILE(APPEND ${CMAKE_BINARY_DIR}/fmt_registers.h "#undef FMT_REGISTERS_H\n")


# Set up includes and definitions

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../src ${CMAKE_CURRENT_SOURCE_DIR}/../src/escrypt ${CMAKE_CURRENT_SOURCE_DIR}/../src/cuda ${OPENSSL_INCLUDE_DIR} ${PLATFORM_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS} ${OPENCL_INCLUDE_DIRS})
ADD_DEFINITIONS ( -DAC_BUILT=1 -D__SSE2__=1 -DHAVE_OPENCL=1 -DHAVE_CUDA=1 -DJTRDLL_EXPORTS=1 -DJTRDLL=1 ${PLATFORM_DEFINITIONS} )

# Copy SHA224 version
ADD_CUSTOM_COMMAND(
	PRE_BUILD
	OUTPUT ${CMAKE_BINARY_DIR}/rawsha224.cu ${CMAKE_BINARY_DIR}/cuda_rawsha224_fmt.c
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../src/cuda/rawsha256.cu ${CMAKE_BINARY_DIR}/rawsha224.cu
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../src/cuda_rawsha256_fmt.c ${CMAKE_BINARY_DIR}/cuda_rawsha224_fmt.c
)
ADD_CUSTOM_TARGET(do_sha_copy DEPENDS ${CMAKE_BINARY_DIR}/rawsha224.cu ${CMAKE_BINARY_DIR}/cuda_rawsha224_fmt.c)

# Manually compile CUDA SHA224/256 code with extra define
LIST(REMOVE_ITEM jtrdll_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/cuda/rawsha256.cu)
SET_PROPERTY(SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../src/cuda_rawsha256_fmt.c APPEND_STRING PROPERTY COMPILE_FLAGS " -DSHA256=1 ")
LIST(APPEND jtrdll_SOURCES ${CMAKE_BINARY_DIR}/cuda_rawsha224_fmt.c)
SET_PROPERTY(SOURCE ${CMAKE_BINARY_DIR}/cuda_rawsha224_fmt.c APPEND_STRING PROPERTY COMPILE_FLAGS " -DSHA224=1 ")

CUDA_COMPILE(RAWSHA256_O ../src/cuda/rawsha256.cu OPTIONS -DSHA256=1)
CUDA_COMPILE(RAWSHA224_O ${CMAKE_BINARY_DIR}/rawsha224.cu OPTIONS -DSHA224=1)

# build jtrdll
CUDA_ADD_LIBRARY( jtrdll SHARED ${jtrdll_SOURCES} ${jtrdll_HEADERS} ${zlib_SOURCES} ${zlib_HEADERS} ${RAWSHA256_O} ${RAWSHA224_O} ${RAWSHA512_O} ${ASM_OBJECTS})
TARGET_LINK_LIBRARIES( jtrdll ${OPENSSL_LIBRARIES} ${OPENCL_LIBRARIES} )

ADD_DEPENDENCIES(jtrdll do_sha_copy)



FOREACH(source ${jtrdll_SOURCES})
	IF(NOT ${source} MATCHES ".*dllio.cpp$" AND NOT ${source} MATCHES ".*.cu$")
		SET_PROPERTY(SOURCE ${source} APPEND_STRING PROPERTY COMPILE_FLAGS " /FI\"dllio.h\" ")
	ENDIF()
ENDFOREACH()


# build jtrexe
ADD_EXECUTABLE( jtrexe ${CMAKE_CURRENT_SOURCE_DIR}/jtrexe.c )
TARGET_LINK_LIBRARIES( jtrexe jtrdll )

